--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,559 @@
     font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/* первая секция header */
+
 .header {
+    display: flex;
+    position: relative;
     height: 100vh;
     min-height: 600px;
     max-height: 756px;
+    overflow: hidden;
     /* выше установили ограничения для секции */
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo {
+    min-height: 32px;
+    min-width: 183px;
+}
+
+.logo_place-header {
+    position: absolute;
+    top: 30px;
+    left: 64px;
+    background: url(../images/logo.svg);
+    z-index: 3;
+}
+
+.header__title {
+    width: 730px;
+    min-height: 96px;
+    font-size: 102px;
+    font-weight: bold;
+    z-index: 3;
+}
+
+.header__title_position {
+    margin: auto 64px auto;
+    align-self: center;
+    z-index: 3;
+}
+
+.header__subtitle {
+    width: 388px;
+    min-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+    z-index: 3;
+}
+
+.header__subtitle_position {
+    position: absolute;
+    left: 64px;
+    bottom: 30px;
+    z-index: 3;
+}
+
+.header__subtitle__link {
+    text-decoration: none;
+}
+
+.header__main-illustration {
+    height: 608px;
+    width: 765px;
+}
+
+.main-illustration {
+    height: 608px;
+    width: 765px;
+}
+
+.main-illustration_position {
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
 .header__square-pic {
+    background-color: blue;
     height: 568px;
     width: 568px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__square-pic_position {
+    position: absolute;
+    top: 64px;
+    right: 0;
+    z-index: 0;
+}
+
+/* вторая секция description */
+
+.description {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.two-columns { 
+    width: 80%;
+    display: flex;
+}
+
+.two-columns_modifier {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 100px auto;
+}
+
+.two-columns__brief {
+    width: 175px;
+}
+
+.two-columns__brief_modifier {
+    line-height: 1.2;
+    font-size: 18px;
+    color: blue;
+}
+
+.two-columns__brief__text_modifier {
+    margin: 0px;
+}
+
+.two-columns__main-text {
+    width: 80%;
+    min-width: 784px;
+    list-style: none;
+    margin: 0;
+}
+
+.two-columns__main-text__paragraph {
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: normal;
+    box-sizing: content-box;
+}
+
+.two-columns__main-text__paragraph_modifier {
+    padding-bottom: 30px;
+}
+
+.two-columns__main-text__paragraph__text_modifier {
+    margin: 0px;
+}
+.span-accent {
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+/* Третья секция digits */
+
+.digits {
+    display: flex;
+}
+
+.digits_modifier {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.section-title {
+    width: 60%;
+}
+
+.section-title_modifier {
+    margin-top: 100px;
+    text-align: center;
+    align-items: center;
+}
+
+.section-title__text {
+    line-height: 69px;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.section-title__text_modifier {
+    text-align: center;
+    margin: auto;
+    align-items: center;
+}
+
+.section-subtitle {
+    width: 60%;
+}
+
+.section-subtitle_modifier {
+    margin-top: 20px;
+} 
+
+.section-subtitle__text {
+    line-height: 34px;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+.section-subtitle__text_modifier {
+    text-align: center;
+    margin: auto;
+    align-items: center;
+}
+
+.table {
+    width: 1100px;
+    display: flex;
+}
+
+.table_modifier {
+    margin: 0 auto 100px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.tablet__cell_modifier {
+    margin-top: 60px;
+    width: 250px;
+}
+
+.tablet__cell__heading__text {
+    line-height: 1.15;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.tablet__cell__heading__text_modifier {
+    margin: 0;
+}
+
+.tablet__cell__text__line {
+    line-height: 1.2;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.table__cell__text__line_modifier {
+    margin: 20px 0 0;
+}
+
+/* Четвертая секция Фейнмана */
+
+.feinman {
+    height: 790px;
+    position: relative;
+}
+
+.feinman-section {
+    height: 690px;
+    display: flex;
+}
+
+.feinman-section_modifier {
+    margin-top: 100px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.feinman-section__title {
+    width: 648px;
+}
+
+.feinman-section__title-font {
+    margin: 0;
+    line-height: 1.15;
+    font-size: 120px;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.feinman-section__subtitle_modifier {
+    text-align: center;
+    margin: auto;
+    align-items: center;
+    margin-top: 70px;
+    z-index: 1;
+}
+
+.feinman-section__subtitle-font {
+    margin: 0;
+    line-height: 51px;
+    font-size: 36px;
+    font-weight: normal;
+}
+
+.feinman-section__feinmanlink_modifier {
+    position: absolute;
+    top: 50%;
+    right: 48px;
+}
+
+.feinman-section__feinmanlink__link_style {
+    text-decoration: none;
+    color: black;
+    line-height: 51px;
+    font-size: 36px;
+    font-weight: normal;
+}
+
+.feinman-section__image {
+    height: 637px;
+    width: 867px;
+}
+
+.feinman-section__image_modifier {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+.feinman-section__image__illustration {
+    height: 637px;
+    width: 867px;
+    object-fit: cover;
+}
+
+.feinman-section__image__illustration_modifier {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+/* Пятая секция kaufman */ 
+.kaufman {
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+
+.kaufman_modifier {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: black;
+    z-index: -1;
+}
+
+.section-title_theme_dark {
+    color: white;
+    margin-top: 90px;
+    z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+    color: white;
+    margin-top: 20px;
+    z-index: 1;
+}
+
+.table_theme_dark {
+    margin: 0 auto 90px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    z-index: 1;
+}
+
+/* элемент с модификатором вида ключ-значение */
 .table__cell_theme_dark {
     width: 200px;
     color: white;
     margin-right: 0;
     margin-top: 80px;
+    z-index: 1;
 }
+
+.kaufman__triangle {
+    height: 877px;
+    width: 877px;
+}
+
+.kaufman__triangle_modifier {
+    position: absolute;
+    top: 0;
+    right: -210px;
+    z-index: 0;
+}
+
+.kaufman__triangle__image {
+    height: 877px;
+    width: 877px;
+}
+
+.kaufman__triangle__image_modifier {
+    position: absolute;
+    background-size: contain;
+    z-index: 0;
+}
+
+/* элемент footer */
+
+.footer {
+    min-height: 350px;
+    display: flex;
+    background-color: black;
+}
+
+.footer__columns {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+}
+
+.footer__columns_modifier {
+    margin: 60px auto 40px;
+}
+
+/* блок copyright */
+.footer__column_content_copyright {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-basis: 711px;
+}
+
+.logo_place_footer {
+    background: url(../images/logo_white.svg);
+    z-index: 3;
+    margin: 0;
+}
+
+.footer__author {
+    line-height: 25px;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.footer__author_modifier {
+    margin: 18px 0;
+}
+
+/* блок info */
+
+.footer__column_content_info {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.footer__column-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    list-style: none;
+    margin: 0;
+}
+
+.footer__column-heading {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer__column-heading_modifier {
+    margin: 0;
+}
+
+.footer__column-links {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.footer__column-links_modifier {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.footer__column-links_indent-up {
+    margin-top: 20px;
+}
+
+.footer__column-links_indent-down {
+    margin-bottom: 16px;
+}
+
+/* блок social */
+
+.footer__column_content_social {
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.footer__column-social {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer__column-social_modifier {
+    margin: 0;
+}
+
+.footer__social-icon {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.footer__social-icon_modifier {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.icon {
+    height: 16px;
+    width: 16px;
+}
+
+.social-link_modifier {
+    margin-left: 10px;
+    text-decoration: none;
+    color: white;
+}
+
+.theme_dark {
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
