--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
 /* первая секция header */
 
 .header {
+    background-color: #F2F2F2;
     display: flex;
     position: relative;
     height: 100vh;
@@ -26,7 +27,7 @@
     min-width: 183px;
 }
 
-.logo_place-header {
+.logo_place_header {
     position: absolute;
     top: 30px;
     left: 64px;
@@ -39,10 +40,8 @@
     min-height: 96px;
     font-size: 102px;
     font-weight: bold;
+    color: #000000;
     z-index: 3;
-}
-
-.header__title_position {
     margin: auto 64px auto;
     align-self: center;
     z-index: 3;
@@ -53,31 +52,22 @@
     min-height: 25px;
     font-size: 18px;
     font-weight: normal;
+    color:  #000000;
     z-index: 3;
-}
-
-.header__subtitle_position {
     position: absolute;
     left: 64px;
     bottom: 30px;
     z-index: 3;
 }
 
-.header__subtitle__link {
+.header__link {
     text-decoration: none;
+    color:#2F80ED;
 }
 
 .header__main-illustration {
     height: 608px;
     width: 765px;
-}
-
-.main-illustration {
-    height: 608px;
-    width: 765px;
-}
-
-.main-illustration_position {
     object-fit: cover;
     position: absolute;
     right: 0;
@@ -86,12 +76,9 @@
 }
 
 .header__square-pic {
-    background-color: blue;
+    background-color: #2F80ED;
     height: 568px;
     width: 568px;
-}
-
-.header__square-pic_position {
     position: absolute;
     top: 64px;
     right: 0;
@@ -109,9 +96,6 @@
 .two-columns { 
     width: 80%;
     display: flex;
-}
-
-.two-columns_modifier {
     flex-direction: row;
     justify-content: space-between;
     margin: 100px auto;
@@ -119,15 +103,9 @@
 
 .two-columns__brief {
     width: 175px;
-}
-
-.two-columns__brief_modifier {
     line-height: 1.2;
     font-size: 18px;
-    color: blue;
-}
-
-.two-columns__brief__text_modifier {
+    color: #2F80ED;
     margin: 0px;
 }
 
@@ -138,21 +116,18 @@
     margin: 0;
 }
 
-.two-columns__main-text__paragraph {
+.two-columns__paragraph {
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
     box-sizing: content-box;
 }
 
-.two-columns__main-text__paragraph_modifier {
+.two-columns__paragraph_indent {
     padding-bottom: 30px;
 }
 
-.two-columns__main-text__paragraph__text_modifier {
-    margin: 0px;
-}
-.span-accent {
+.two-columns__span-accent {
     line-height: 34px;
     font-size: 24px;
     font-weight: bold;
@@ -162,9 +137,6 @@
 
 .digits {
     display: flex;
-}
-
-.digits_modifier {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -172,139 +144,97 @@
 
 .section-title {
     width: 60%;
-}
-
-.section-title_modifier {
+    margin: 0;
     margin-top: 100px;
     text-align: center;
     align-items: center;
-}
-
-.section-title__text {
     line-height: 69px;
     font-size: 60px;
     font-weight: bold;
 }
 
-.section-title__text_modifier {
-    text-align: center;
-    margin: auto;
-    align-items: center;
-}
-
 .section-subtitle {
     width: 60%;
-}
-
-.section-subtitle_modifier {
+    margin: 0;
     margin-top: 20px;
-} 
-
-.section-subtitle__text {
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
-}
-
-.section-subtitle__text_modifier {
     text-align: center;
-    margin: auto;
     align-items: center;
 }
 
 .table {
     width: 1100px;
-    display: flex;
-}
-
-.table_modifier {
     margin: 0 auto 100px;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
 }
 
-.tablet__cell_modifier {
+.table__cell {
     margin-top: 60px;
     width: 250px;
 }
 
-.tablet__cell__heading__text {
+.table__heading {
     line-height: 1.15;
     font-size: 24px;
     font-weight: bold;
-}
-
-.tablet__cell__heading__text_modifier {
     margin: 0;
 }
 
-.tablet__cell__text__line {
+.table__text {
     line-height: 1.2;
     font-size: 18px;
     font-weight: normal;
-}
-
-.table__cell__text__line_modifier {
     margin: 20px 0 0;
 }
+
 
 /* Четвертая секция Фейнмана */
 
 .feinman {
     height: 790px;
     position: relative;
-}
-
-.feinman-section {
-    height: 690px;
+    background-color: #F2F2F2;
     display: flex;
-}
-
-.feinman-section_modifier {
-    margin-top: 100px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    z-index: -1;
 }
 
-.feinman-section__title {
+.feinman__title {
     width: 648px;
-}
-
-.feinman-section__title-font {
     margin: 0;
+    margin-top: 100px;
     line-height: 1.15;
     font-size: 120px;
     font-weight: bold;
+    color: #000000;
     text-align: center;
     align-items: center;
     z-index: 1;
 }
 
-.feinman-section__subtitle_modifier {
+.feinman__subtitle {
     text-align: center;
-    margin: auto;
     align-items: center;
     margin-top: 70px;
     z-index: 1;
-}
-
-.feinman-section__subtitle-font {
-    margin: 0;
     line-height: 51px;
     font-size: 36px;
     font-weight: normal;
+    color: #000000;
 }
 
-.feinman-section__feinmanlink_modifier {
+.feinman__link {
     position: absolute;
     top: 50%;
     right: 48px;
-}
-
-.feinman-section__feinmanlink__link_style {
     text-decoration: none;
     color: black;
     line-height: 51px;
@@ -312,29 +242,14 @@
     font-weight: normal;
 }
 
-.feinman-section__image {
+.feinman__image {
     height: 637px;
     width: 867px;
-}
-
-.feinman-section__image_modifier {
     position: absolute;
     left: 0;
     bottom: 0;
-    z-index: -1;
-}
-
-.feinman-section__image__illustration {
-    height: 637px;
-    width: 867px;
+    z-index: 0;
     object-fit: cover;
-}
-
-.feinman-section__image__illustration_modifier {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
 }
 
 /* Пятая секция kaufman */ 
@@ -342,13 +257,10 @@
     display: flex;
     position: relative;
     overflow: hidden;
-}
-
-.kaufman_modifier {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-color: black;
+    background-color: #1F1F1F ;
     z-index: -1;
 }
 
@@ -365,11 +277,8 @@
 }
 
 .table_theme_dark {
+    color: white;
     margin: 0 auto 90px;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
     z-index: 1;
 }
 
@@ -385,24 +294,11 @@
 .kaufman__triangle {
     height: 877px;
     width: 877px;
-}
-
-.kaufman__triangle_modifier {
     position: absolute;
     top: 0;
     right: -210px;
     z-index: 0;
-}
-
-.kaufman__triangle__image {
-    height: 877px;
-    width: 877px;
-}
-
-.kaufman__triangle__image_modifier {
-    position: absolute;
     background-size: contain;
-    z-index: 0;
 }
 
 /* элемент footer */
@@ -410,17 +306,19 @@
 .footer {
     min-height: 350px;
     display: flex;
-    background-color: black;
+    background-color: #1F1F1F ;
 }
 
 .footer__columns {
     width: 90%;
     display: flex;
     flex-direction: row;
+    margin: 60px auto 40px;
 }
 
-.footer__columns_modifier {
-    margin: 60px auto 40px;
+.footer_theme_dark {
+    background-color: #1F1F1F ;
+    color: white;
 }
 
 /* блок copyright */
@@ -443,9 +341,6 @@
     line-height: 25px;
     font-size: 18px;
     font-weight: normal;
-}
-
-.footer__author_modifier {
     margin: 18px 0;
 }
 
@@ -472,9 +367,6 @@
     line-height: 30px;
     font-size: 18px;
     font-weight: bold;
-}
-
-.footer__column-heading_modifier {
     margin: 0;
 }
 
@@ -482,22 +374,16 @@
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
-}
-
-.footer__column-links_modifier {
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    text-decoration: none;
+    color: white;
 }
 
-.footer__column-links_indent-up {
+.footer__list-links {
     margin-top: 20px;
-}
-
-.footer__column-links_indent-down {
     margin-bottom: 16px;
+    list-style: none;
+    padding: 0;
 }
 
 /* блок social */
@@ -510,23 +396,10 @@
     align-items: flex-end;
 }
 
-.footer__column-social {
-    line-height: 30px;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.footer__column-social_modifier {
-    margin: 0;
-}
-
 .footer__social-icon {
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
-}
-
-.footer__social-icon_modifier {
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -539,12 +412,14 @@
     width: 16px;
 }
 
-.social-link_modifier {
+.footer__social-link {
     margin-left: 10px;
     text-decoration: none;
     color: white;
 }
 
+
+/* пример */
 .theme_dark {
     color: white;
 }
