ПР2 правки после 1 ревью

--- a/blocks/content/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/content/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,8 +1,11 @@
-
 .two-columns__paragraph {
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
     box-sizing: content-box;
     padding-top: 30px;
+}
+
+.two-columns__paragraph:first-child {
+    padding: 0px;
 }
