--- a/blocks/content/video/__iframe/video__iframe.css
+++ b/blocks/content/video/__iframe/video__iframe.css
@@ -1,9 +1,10 @@
-
 .video__iframe {
+    border: none;
     width: 515px;
     height: 316px;
     margin-right: 20px;  
 }
+
 .video__iframe:nth-child(2) {
     margin: 0;
-}  
+}
