--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,4 +1,3 @@
-
 .footer__column-link {
     line-height: 30px;
     font-size: 18px;
@@ -8,8 +7,11 @@
     color: white;
 }
 
+.footer__column-link:first-child {
+    padding: 0px;
+}
 
-
-
-
-
+.footer__column-link:hover {
+    opacity: 0.5;
+    transition: opacity 1s linear;
+}
