--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,15 @@
+@import url(./__columns/footer__columns.css);
+@import url(./__column/footer__column.css);
+@import url(./__column/_content_copyrignt/footer__column_content_copyright.css);
+@import url(./__column/_content_info/footer__column_content_info.css);
+@import url(./__column/_content_social/footer__column_content_social.css);
+@import url(./__author/footer__author.css);
+@import url(./__column-heading/footer__column-heading.css);
+@import url(./__column-links/footer__column-links.css);
+@import url(./__column-link/footer__column-link.css);
+@import url(./__list-item/footer__list-item.css);
+@import url(./__social-icon/footer__social-icon.css);
+
 /* элемент footer */
 .footer {
     min-height: 350px;
