--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,8 @@
+@import url(./__title/header__title.css);
+@import url(./__subtitle/header__subtitle.css);
+@import url(./__link/header__link.css);
+@import url(./__main-illustration/header__main-illustration.css);
+@import url(./__square-pic/header__square-pic.css);
 /* первая секция header */
 .header {
     background-color: #F2F2F2;
