--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,3 +1,5 @@
+@import url(./__triangle/kaufman__triangle.css);
+
 /* Пятая секция kaufman */ 
 .kaufman {
     display: flex;
@@ -8,4 +10,5 @@
     align-items: center;
     background-color: #1F1F1F ;
     z-index: 0;
+    padding-top: 90px;
 }
