--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,3 +1,5 @@
+@import url(./_place_footer/logo_place_footer.css);
+@import url(./_place_header/logo_place_header.css);
 .logo {
     min-height: 32px;
     min-width: 183px;
