--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,3 +1,6 @@
+@import url(./__logo-zone/resources__logo-zone.css);
+@import url(./__logo/resources__logo.css);
+
 /* спринт 2 секция resources */
 .resources {
     display: flex;
