--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,3 +1,6 @@
+@import url(./__iframes/video__iframes.css);
+@import url(./__iframe/video__iframe.css);
+
 /* спринт 2 секция  video */
 .video {
     margin: 0 auto;
